k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lushop
  labels:
    name: lushop
    app: lushop-microservices
